# pairs-trading

./: .gitignore  README.md  main.py  pyproject.toml
data/: SPX_MID_Constituens.csv
notebooks/: pairs-trading.ipynb
pairstrading/: __init__.py  calc.py  calendar.py  copula.py  distance.py  selection.py
tests/: test_calendar.py
thesis/: Bibliography.bib  Nomenclature.tex  main.tex
thesis/Sections/: 01 Introduction.tex  02 Literature Overview.tex  03 Copulas.tex  04 Pairs Trading Methodology.tex  05 Results.tex  06 Conclusion.tex
