[project]
name = "pairs-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.3",
    "matplotlib>=3.10.0",
    "numpy>=2.4.1",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pyvinecopulib>=0.7.0",
    "scipy>=1.16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pairstrading*"]
exclude = ["data*", "db*", "notebooks*"]
